# apoenastack

./: LICENSE  README.md
01_Estruturando_Projetos/: Conteudo.md
01_Estruturando_Projetos/Project-Apoena/: ReadME.md
01_Estruturando_Projetos/template/: cookiecutter.json
02_Docker/: Conteudo.md
02_Docker/python_docker/: DockerFile  commands.txt  main.py
02_Docker/read_api/: .env  DockerFile  requirements.txt
02_Docker/read_api/read_api/: main.py
02_Docker/read_api/read_api/src/classes/: minio_client.py
02_Intro_Algoritmos/: Conteudo.md
Encontros de Engenharia/01_Estruturando_Projetos/Project-Apoena/: pyproject.toml
Encontros de Engenharia/01_Estruturando_Projetos/template/{{cookiecutter.project_name}}/: ReadME.md  pyproject.toml
Encontros de Engenharia/02_Docker/python_docker/: requirements.txt
Encontros de Engenharia/02_Docker/python_docker/src/: brasil_api.py
Encontros de Engenharia/02_Docker/read_api/: docker-compose.yaml  pyproject.toml
Encontros de Engenharia/02_Docker/read_api/read_api/src/: config_init.py
Encontros de Engenharia/02_Docker/read_api/read_api/src/classes/: ingest_process.py
Encontros de Engenharia/03_DuckDB_Pedro_Holanda/: DuckDB_Spark.ipynb  ReadME.md
Encontros de Engenharia/04_POO_Solid/: database_sample.db  notebook_sample.ipynb  project.plantuml
Encontros de Engenharia/04_POO_Solid/poo_solid/: README.md  pyproject.toml
Encontros de Engenharia/04_POO_Solid/poo_solid/poo_solid/: etl_processor.py  file_reader.py  main.py
