[tool.poetry]
name = "Project-Apoena"
version = "0.1"
description = "Projeto para fechar com chave de ouro!"
authors = ["Iury L Rosal <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"