[tool.poetry]
name = {{cookiecutter.project_name}}
version = {{cookiecutter.version}}
description = {{cookiecutter.description}}
authors = ["{{cookiecutter.author}} <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"